--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/-dice-game-/" class="project__link"target="_blank">-dice-game-</a></div>
         <div class="project__card"><div class="project__bullet"></div><a href=" https://michalwachura.github.io/Uplow/" class="project__link"target="_blank">Uplow</a></div>
         <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Pricetable/" class="project__link"target="_blank">Pricetable</a></div>
+        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Jadwiga/" class="project__link"target="_blank">Jadwiga</a></div>
         
      </div>
     <script src="app.js"></script>
