--- a/index.html
+++ b/index.html
@@ -9,45 +9,107 @@
 </head>
 <body>
     <div class="projects__container">
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Web-Image-of-Architecture-/" class="project__link"target="_blank">Architectural Renderings</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href=" https://michalwachura.github.io/clock/" class="project__link"target="_blank">Clock</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/The-Pilgrim/" class="project__link"target="_blank">The Pilgrim</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! Forkify</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Bankist-Website/" class="project__link"target="_blank">Bankist</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Swiss-Cities---Tabbded-Componnent/" class="project__link"target="_blank">Swiss-Cities---Tabbded-Componnent</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank"> !!!!PersonalWebiste-1.0</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Rotated-Circle-Animation/" class="project__link"target="_blank">Rotated-Circle-Animation</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Minimal-Concpet-Gallery/" class="project__link"target="_blank">Minimal-Concpet-Gallery</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Text-Reveal/" class="project__link"target="_blank">Text-Reveal</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">Reveal-element-on-scroll</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Netflix-like-menu/" class="project__link"target="_blank">Netflix-like-menu</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Mobile-Tab-Navigation/" class="project__link"target="_blank">Mobile-Tab-Navigation</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Counter-Liczydlo/" class="project__link"target="_blank">Counter-Liczydlo</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/KalkulatorMade_Code/" class="project__link"target="_blank">KalkulatorMade_Code</a></div>
-        
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Mapty-/" class="project__link"target="_blank">Mapty-</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/DrawAppJS/" class="project__link"target="_blank">DrawAppJS</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Projects-on-Map/" class="project__link"target="_blank">Projects-on-Map</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/ruda-svg/" class="project__link"target="_blank">ruda-svg</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/buildin_svg/" class="project__link"target="_blank">buildin_svg</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Maruder-sMap-1.0/" class="project__link"target="_blank">Maruder-sMap-1.0</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! Slider-Zaczynamy-Programowa-</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/crepper_tile_game/" class="project__link"target="_blank">crepper_tile_game</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Interval-Circles/" class="project__link"target="_blank">Interval-Circles</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! GeoExplore1.0</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! adding_elements_filtring_for_DR</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! Flappybird-by-Kenny-Yip-Coding</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Snake-Game-by-kenny-Yip-Coding/" class="project__link"target="_blank">Snake-Game-by-kenny-Yip-Coding</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/hovereffect-tetris/" class="project__link"target="_blank">hovereffect-tetris</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Pig_Game/" class="project__link"target="_blank">Pig_Game</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Studio_Damian_Radwanski/" class="project__link"target="_blank">Studio_Damian_Radwanski</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://www.michalwachura.com/" class="project__link"target="_blank">Architecutre-Portfolio-Website-0.1</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Personal-Website/#" class="project__link"target="_blank">Personal-Website</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/-dice-game-/" class="project__link"target="_blank">-dice-game-</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href=" https://michalwachura.github.io/Uplow/" class="project__link"target="_blank">Uplow</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Pricetable/" class="project__link"target="_blank">Pricetable</a></div>
-        <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Jadwiga/" class="project__link"target="_blank">Jadwiga</a></div>
-        
+        <div class="category__tile">
+            <div class="category__title">Orginal Projects</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Web-Image-of-Architecture-/" class="project__link"target="_blank">Architectural Renderings</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/The-Pilgrim/" class="project__link"target="_blank">The Pilgrim</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Swiss-Cities---Tabbded-Componnent/" class="project__link"target="_blank">Swiss Cities-Tabbded Componnent</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Rotated-Circle-Animation/" class="project__link"target="_blank">Rotated Circle Animation</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Counter-Liczydlo/" class="project__link"target="_blank">Counter Liczydlo</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Projects-on-Map/" class="project__link"target="_blank">Projects on Map</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/ruda-svg/" class="project__link"target="_blank">SVG - Ruda Śląska</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/buildin_svg/" class="project__link"target="_blank">SVG - Building</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Maruder-sMap-1.0/" class="project__link"target="_blank">Maruder's Map 1.0</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Interval-Circles/" class="project__link"target="_blank">Interval Circles</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! adding_elements_filtring_for_DR</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Pricetable/" class="project__link"target="_blank">Pricetable</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Studio_Damian_Radwanski/" class="project__link"target="_blank">Studio Damian Radwanski</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://www.michalwachura.com/" class="project__link"target="_blank">Architecutre-Portfolio-Website-0.1</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Personal-Website/#" class="project__link"target="_blank">Personal-Website</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/-dice-game-/" class="project__link"target="_blank">Dice Game</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href=" https://michalwachura.github.io/Uplow/" class="project__link"target="_blank">Uplow</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Jadwiga/" class="project__link"target="_blank">Jadwiga</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">Course - Jonas Schmeddman</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">Forkify</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Bankist-Website/" class="project__link"target="_blank">Bankist</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Mapty-/" class="project__link"target="_blank">Mapty</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Pig_Game/" class="project__link"target="_blank">Pig Game</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">Course - Angela Yu</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!PersonalWebiste-1.0</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">Course - 50 projects by Travis</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href=" https://michalwachura.github.io/clock/" class="project__link"target="_blank">Clock</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!! Reveal element on scroll</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Netflix-like-menu/" class="project__link"target="_blank">Netflix like menu</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Mobile-Tab-Navigation/" class="project__link"target="_blank">Mobile Tab Navigation</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/DrawAppJS/" class="project__link"target="_blank">Drawing Application</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/hovereffect-tetris/" class="project__link"target="_blank">Hovereffect tetris</a></div>
+
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">THREE.JS</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! GeoExplore1.0</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">YT - Conor Bailey</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Minimal-Concpet-Gallery/" class="project__link"target="_blank">Minimal-Concpet-Gallery</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">YT - KennyYipCoding</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! Flappybird by </a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/Snake-Game-by-kenny-Yip-Coding/" class="project__link"target="_blank">Snake Game</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">YT - Brocode</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects"></div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">YT - ED</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects"></div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">YT - Zaczynamy Programować</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="" class="project__link"target="_blank">!!!!! Slider-Zaczynamy-Programowa-</a></div>
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/crepper_tile_game/" class="project__link"target="_blank">Crepper Tile Game</a></div>
+            </div>
+        </div>
+        <div class="category__tile">
+            <div class="category__title">YT - Made Code</div>
+            <div class="category__title__tail"></div>
+            <div class="category__projects">
+                <div class="project__card"><div class="project__bullet"></div><a href="https://michalwachura.github.io/KalkulatorMade_Code/" class="project__link"target="_blank">Calculator</a></div>
+            </div>
+        </div>
      </div>
     <script src="app.js"></script>
 </body>
